# ChangeLog for media-sound/squeezecenter
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/squeezecenter/ChangeLog,v 1.7 2008/02/03 21:38:16 lavajoe Exp $

*squeezecenter-7.0_beta20080203 (03 Feb 2008)

  03 Feb 2008; Joe Peterson <lavajoe@gentoo.org>
  +squeezecenter-7.0_beta20080203.ebuild:
  Add nightly for 2008-02-03 and fix MySQL password entry issue

*squeezecenter-7.0_beta20080126 (27 Jan 2008)

  27 Jan 2008; Joe Peterson <lavajoe@gentoo.org>
  +squeezecenter-7.0_beta20080126.ebuild:
  Add nightly for 2008-01-26 and track 7.0 branch (soon to be released)

*squeezecenter-7.0_beta20080119 (21 Jan 2008)

  21 Jan 2008; Joe Peterson <lavajoe@gentoo.org>
  +squeezecenter-7.0_beta20080119.ebuild:
  Add nightly for 2008-01-19

*squeezecenter-7.0_beta20080115 (16 Jan 2008)

  16 Jan 2008; Joe Peterson <lavajoe@gentoo.org>
  +squeezecenter-7.0_beta20080115.ebuild:
  Add nightly for 2008-01-15

*squeezecenter-7.0_beta20080108 (09 Jan 2008)

  09 Jan 2008; Joe Peterson <lavajoe@gentoo.org>
  +squeezecenter-7.0_beta20080108.ebuild:
  Add nightly for 2008-01-08

*squeezecenter-7.0_beta20080102 (07 Jan 2008)

  07 Jan 2008; Joe Peterson <lavajoe@gentoo.org>
  +squeezecenter-7.0_beta20080102.ebuild,
  -squeezecenter-7.0_p20080102.ebuild:
  Move it to beta to properly reflect 7.0 release status

*squeezecenter-7.0_p20080102 (07 Jan 2008)

  07 Jan 2008; Joe Peterson <lavajoe@gentoo.org>
  +files/mDNSResponder-7.0-gentoo.patch, +files/dbcreate-7.0-gentoo.sql,
  +files/dbdrop-7.0-gentoo.sql, +files/avahi-7.0-squeezecenter.service,
  +files/squeezecenter-7.0.conf.d, +files/squeezecenter-7.0.init.d,
  +files/squeezecenter-7.0.logrotate.d, +files/squeezecenter-7.0.prefs,
  +metadata.xml, +squeezecenter-7.0_p20080102.ebuild:
  New package that replaces media-sound/slimserver from version 7.0 on.
  Contributed by Stuart Hickinbottom <stuart@hickinbottom.com>.
