@@ -12,11 +12,13 @@ DIST squeezecenter-7.0-16284-noCPAN.tgz 17972471 RMD160 92f389f54fed54be3a11bdfb
 DIST squeezecenter-7.0-16473-noCPAN.tgz 18160732 RMD160 2e6ed6fce4bc3a93c5d49b2986f3abe8877ba987 SHA1 7f1d111279391a476977caaef5bfdd6f17275b0a SHA256 0d4591c41a633dbbb3ba5fb006fe0fd37079f7e0de72d42bb971dd2a8601e64c
 DIST squeezecenter-7.0-16779-noCPAN.tgz 18167740 RMD160 9d3b061d44a0570d0b559d98c0bcec8444bdcb83 SHA1 c5f49a3d4341d6e5d2c1cb3c3f85c11d5123186a SHA256 ad7e3769089c6c2763f8fe745f363a101ec5953211efcc1bf8dd69167d89c95c
 DIST squeezecenter-7.0-17126-noCPAN.tgz 18427888 RMD160 e1359825b540e3dddbac6a15d882e35541bec68c SHA1 3b80831a940879e60de28ccebc24bf12e048c1e7 SHA256 45954c769564018b4937c113880db3818ec2465717a5bbe22002ffd42846ae6d
+DIST squeezecenter-7.0-17379-noCPAN.tgz 18460808 RMD160 6099c7da31137eb53126bb98c462b8a108fb0066 SHA1 85f7b4551c07b5dac369bad766af878a125980c0 SHA256 8b54b125703f517075df2d31297b23c26c603b17eec8f17b44d723d40aa33812
 EBUILD squeezecenter-7.0_beta20080102.ebuild 11208 RMD160 1873bf01813dd997cf9ab5f3d268b02f8821b110 SHA1 ba7c73d03dbcd9d5c12f61bad3fb7a3674d61659 SHA256 9e6350db001e8c7523819095ee9ddb93ab41da63e44df09ca96a5e627eaf613a
 EBUILD squeezecenter-7.0_beta20080108.ebuild 11345 RMD160 b2f8211140ec810795d1eefcd4dfc86c11804941 SHA1 1cb75e2cb1c6b15a3b245740164ba64e6a2e706c SHA256 03ea35e978070670c97de86cc39237e6859b3fd54d1fe8bafe038e5a2aa07055
 EBUILD squeezecenter-7.0_beta20080115.ebuild 11345 RMD160 d52be118a6872f4699f10ae61ea78ab5f0f455be SHA1 cc0065102cb57d83ddfc67389a955eef877de2e2 SHA256 ea6fef507ecb0615d1e0dcffb842cfd92270eaa1872e4065df108460d5e8da0e
 EBUILD squeezecenter-7.0_beta20080119.ebuild 11345 RMD160 2b1b0371478210a85d0fddb88a38e8da45dbac98 SHA1 36702a99934e06e599708aa51c9898889feb858e SHA256 63a081ba22b681958ff39571a81dcd4e55d1c6d3e704696665265900e9516e9d
 EBUILD squeezecenter-7.0_beta20080126.ebuild 11460 RMD160 0b1b6dbd2b960015376932b092d294829068856b SHA1 6ee292cf10c8771ece1168536fde150cbbe6d879 SHA256 ab477bcb488208566c5aef910b3034c76a74aa2361254e9d834effb6331fa952
 EBUILD squeezecenter-7.0_beta20080203.ebuild 11461 RMD160 c36937b0745aa6a1a9de710c41a11789d69b867d SHA1 70095eed48e0efe032d1ae89e0be999f69bcf101 SHA256 3e14aa3211aaabb3bface62453ba22d6a0e72d6c73209823f2ee889f9d890442
-MISC ChangeLog 1946 RMD160 9359e280556f9ab2ef1376227355d271016991b3 SHA1 501ef2049d57c9c2d3eb215d8b88b842ffc46894 SHA256 75b2c2a723172185d5020308c05c02e6057c89c40050ecbc89d2170cb27bf686
+EBUILD squeezecenter-7.0_beta20080210.ebuild 11461 RMD160 b61585021619704f9e20f7dd341313babcdc0938 SHA1 fd4c0159d08ce655df9ddabfe08352c80d99a012 SHA256 c745fba7cf04379ceaf55effa3c954b0960dbb24cc585a9fb12b5d012b7ac85b
+MISC ChangeLog 2114 RMD160 cdbf157d8b461d68d284fb990d579c8ab2886025 SHA1 b49a69d9785e3fa2b4e66d277ef88e62f45bded9 SHA256 33f7a0a0a998a7aae5a7fdc7f80db5d8d8fc444f718bc7b58a85fcb6250de4b1
 MISC metadata.xml 790 RMD160 c75ebb0eda5fdc93127d453d975acebc50bec589 SHA1 e9cd926018accadcd17691d24ae22ca2620e0c30 SHA256 d886ca6099eb5d1a95fa1f5cb833b91eac229c5c1df478f73e52f6d3b1a5e135
