@@ -1,6 +1,12 @@
 # ChangeLog for media-sound/squeezecenter
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/squeezecenter/ChangeLog,v 1.7 2008/02/03 21:38:16 lavajoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/squeezecenter/ChangeLog,v 1.8 2008/02/11 20:38:46 lavajoe Exp $
+
+*squeezecenter-7.0_beta20080210 (11 Feb 2008)
+
+  11 Feb 2008; Joe Peterson <lavajoe@gentoo.org>
+  +squeezecenter-7.0_beta20080210.ebuild:
+  Add nightly for 2008-02-10
 
 *squeezecenter-7.0_beta20080203 (03 Feb 2008)
 
